# Simple-Banking-System

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: Account.cpp  Account.h  Bank.cpp  Bank.h
tests/: CMakeLists.txt  bank_tests.cpp
